kubernetes/KC/apps/self-hosted/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: self-hosted
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.100.0
          args:
          - start.sh
          - immich
          volumeMounts:
            - name: pvc
              mountPath: /usr/src/app/upload
              subPath: uploads
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: self-hosted
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v1.100.0
          args:
          - start.sh
          - microservices
          resources:
            limits:
              gpu.intel.com/i915: 1000m
          volumeMounts:
            - name: pvc
              mountPath: /usr/src/app/upload
              subPath: uploads
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: self-hosted
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.100.0
          volumeMounts:
            - name: pvc
              mountPath: /cache
              subPath: cache
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: immich
---
## Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: self-hosted
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: redis:7.2.5
          volumeMounts:
            - name: pvc
              mountPath: /data
              subPath: redis
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: immich
