kubernetes/KC/apps/self-hosted/immich/service.sops.yaml
## Immich Server
apiVersion: v1
kind: Service
metadata:
    name: immich-server
    namespace: self-hosted
spec:
    selector:
        app: immich-server
    ports:
        - name: ENC[AES256_GCM,data:s1aWng==,iv:9f+BqidC+p99qyMFwDSPI9NH2SlWz0FtpM/uWDHWnvg=,tag:y5wN2w0JGppoW5jIy1xgkw==,type:str]
          port: ENC[AES256_GCM,data:fgSlZw==,iv:NF+wDoJVZjV6bQh/e9U5Vn3hw5c52isJ3JDIwjIdABI=,tag:To0hop5dBMJQZ/+IucCtzw==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VDhjY1RYUEEwdExkcE5Y
[...]
            GCuDR45kUmF5tyvZnGxl9pFXaP8PvRQiN0+ZKoWPBuYNztQWTDWQew==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-07T00:03:57Z"
    mac: ENC[AES256_GCM,data:M1k6ZRLgGnuPCIps0u+PcTByX5ycAWeZMyvAihVDonJKd8sV46z942pYySrjg82zpj6VndmuBRcrpH1An4fqcZW6lL02PmCs2nAvzwEgGfkucWY1JjvnnnqKlbN38pcllfp+kb8U4xQQlArwpYabvaqelnYXwifh98S0GJzY9/k=,iv:S8o/Mb8hf+kEFmFOjLqJnwiGHzuyzuq9zY1+TzaT7Gk=,tag:W2A0KHANK9eyxNzQ8BLR0w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
---
## Immich Microservices
apiVersion: v1
kind: Service
metadata:
    name: immich-microservices
    namespace: self-hosted
spec:
    selector:
        app: immich-microservices
    ports:
        - name: ENC[AES256_GCM,data:WnnPfg==,iv:VL2Er8ZUd4m247JJToL0p8LQMpWn/c9z+1ATzMGfZVo=,tag:OJangQ1wZvH7Kp0a7VSv3A==,type:str]
          port: ENC[AES256_GCM,data:+LuqRw==,iv:1W68+lOAuTuPzP/yKsfmorN40BPKP9BN2Ag4tpLabZY=,tag:sTPlXMO/oq9WpDaPJn+kSw==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VDhjY1RYUEEwdExkcE5Y
[...]
            GCuDR45kUmF5tyvZnGxl9pFXaP8PvRQiN0+ZKoWPBuYNztQWTDWQew==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-07T00:03:57Z"
    mac: ENC[AES256_GCM,data:M1k6ZRLgGnuPCIps0u+PcTByX5ycAWeZMyvAihVDonJKd8sV46z942pYySrjg82zpj6VndmuBRcrpH1An4fqcZW6lL02PmCs2nAvzwEgGfkucWY1JjvnnnqKlbN38pcllfp+kb8U4xQQlArwpYabvaqelnYXwifh98S0GJzY9/k=,iv:S8o/Mb8hf+kEFmFOjLqJnwiGHzuyzuq9zY1+TzaT7Gk=,tag:W2A0KHANK9eyxNzQ8BLR0w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
---
## Immich Machine Learning
apiVersion: v1
kind: Service
metadata:
    name: immich-machine-learning
    namespace: self-hosted
spec:
    selector:
        app: immich-machine-learning
    ports:
        - name: ENC[AES256_GCM,data:jtRDJg==,iv:USwIck3WSO9Ky83tnU3SdxP9WG/PHOMddClsOf2hQPM=,tag:NW9bnJmvYPncemjFxcz5eA==,type:str]
          port: ENC[AES256_GCM,data:jE5B3Q==,iv:VIyjefMjp2qNkZ/kQRxjcFGxD7fgpg0qfYRtVsUoffQ=,tag:kJvKm3ywZU62oCbuRu/q4g==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VDhjY1RYUEEwdExkcE5Y
[...]
            GCuDR45kUmF5tyvZnGxl9pFXaP8PvRQiN0+ZKoWPBuYNztQWTDWQew==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-07T00:03:57Z"
    mac: ENC[AES256_GCM,data:M1k6ZRLgGnuPCIps0u+PcTByX5ycAWeZMyvAihVDonJKd8sV46z942pYySrjg82zpj6VndmuBRcrpH1An4fqcZW6lL02PmCs2nAvzwEgGfkucWY1JjvnnnqKlbN38pcllfp+kb8U4xQQlArwpYabvaqelnYXwifh98S0GJzY9/k=,iv:S8o/Mb8hf+kEFmFOjLqJnwiGHzuyzuq9zY1+TzaT7Gk=,tag:W2A0KHANK9eyxNzQ8BLR0w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
---
## Redis
apiVersion: v1
kind: Service
metadata:
    name: immich-redis
    namespace: self-hosted
spec:
    selector:
        app: immich-redis
    ports:
        - name: ENC[AES256_GCM,data:kzZwdgE=,iv:Fnrjms8tt8gl4GmhgN5XOch0ytyyJtvplELXNxUDEqY=,tag:6FM9LWwxNLzmoVk0ect4VQ==,type:str]
          port: ENC[AES256_GCM,data:jTZwJA==,iv:H+iWbOnCmGOufrVhzyW2sBHT4gP46quwViRjBDMbSTE=,tag:MsMTnsItbU5U59LK/EszCg==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VDhjY1RYUEEwdExkcE5Y
[...]
            GCuDR45kUmF5tyvZnGxl9pFXaP8PvRQiN0+ZKoWPBuYNztQWTDWQew==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-07T00:03:57Z"
    mac: ENC[AES256_GCM,data:M1k6ZRLgGnuPCIps0u+PcTByX5ycAWeZMyvAihVDonJKd8sV46z942pYySrjg82zpj6VndmuBRcrpH1An4fqcZW6lL02PmCs2nAvzwEgGfkucWY1JjvnnnqKlbN38pcllfp+kb8U4xQQlArwpYabvaqelnYXwifh98S0GJzY9/k=,iv:S8o/Mb8hf+kEFmFOjLqJnwiGHzuyzuq9zY1+TzaT7Gk=,tag:W2A0KHANK9eyxNzQ8BLR0w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
